--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-/* Include Foundation*/
+/*we use ../ because we created a folder for scss.  need to go up a directory*/
 /**
  * Foundation for Sites by ZURB
  * Version 6.3.0
@@ -1254,4 +1254,174 @@ button {
         margin-bottom: 0; } }
 
 body {
-  background-color: lightsalmon; }
+  background-color: mediumvioletred; }
+
+header {
+  max-width: 75rem;
+  margin-right: auto;
+  margin-left: auto; }
+  header::before, header::after {
+    display: table;
+    content: ' '; }
+  header::after {
+    clear: both; }
+  header h1 {
+    width: 100%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem;
+    text-align: center; }
+    @media print, screen and (min-width: 40em) {
+      header h1 {
+        padding-right: 0.9375rem;
+        padding-left: 0.9375rem; } }
+    header h1:last-child:not(:first-child) {
+      float: right; }
+  header h2 {
+    width: 100%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem;
+    text-align: center;
+    margin-top: 0; }
+    @media print, screen and (min-width: 40em) {
+      header h2 {
+        padding-right: 0.9375rem;
+        padding-left: 0.9375rem; } }
+    header h2:last-child:not(:first-child) {
+      float: right; }
+
+main #makeGuess {
+  max-width: 75rem;
+  margin-right: auto;
+  margin-left: auto; }
+  main #makeGuess::before, main #makeGuess::after {
+    display: table;
+    content: ' '; }
+  main #makeGuess::after {
+    clear: both; }
+  main #makeGuess h2 {
+    width: 100%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem;
+    text-align: center; }
+    @media print, screen and (min-width: 40em) {
+      main #makeGuess h2 {
+        padding-right: 0.9375rem;
+        padding-left: 0.9375rem; } }
+    main #makeGuess h2:last-child:not(:first-child) {
+      float: right; }
+
+main #checkRow {
+  max-width: 75rem;
+  margin-right: auto;
+  margin-left: auto; }
+  main #checkRow::before, main #checkRow::after {
+    display: table;
+    content: ' '; }
+  main #checkRow::after {
+    clear: both; }
+  main #checkRow #guess {
+    width: 41.66667%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem;
+    display: block;
+    padding: 15px; }
+    @media print, screen and (min-width: 40em) {
+      main #checkRow #guess {
+        padding-right: 0.9375rem;
+        padding-left: 0.9375rem; } }
+    main #checkRow #guess:last-child:not(:first-child) {
+      float: right; }
+  main #checkRow #check {
+    width: 41.66667%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem;
+    padding: 15px;
+    border: 2px solid black;
+    background-color: violet;
+    display: block;
+    margin-top: 15px; }
+    @media print, screen and (min-width: 40em) {
+      main #checkRow #check {
+        padding-right: 0.9375rem;
+        padding-left: 0.9375rem; } }
+    main #checkRow #check:last-child:not(:first-child) {
+      float: right; }
+
+main #colorDisplay {
+  max-width: 75rem;
+  margin-right: auto;
+  margin-left: auto; }
+  main #colorDisplay::before, main #colorDisplay::after {
+    display: table;
+    content: ' '; }
+  main #colorDisplay::after {
+    clear: both; }
+
+main #colors {
+  width: 100%;
+  float: left;
+  padding-right: 0.625rem;
+  padding-left: 0.625rem;
+  border: 2px solid black; }
+  @media print, screen and (min-width: 40em) {
+    main #colors {
+      padding-right: 0.9375rem;
+      padding-left: 0.9375rem; } }
+  main #colors:last-child:not(:first-child) {
+    float: right; }
+
+main #firstRow, main #secondRow {
+  display: flex;
+  justify-content: center;
+  margin: 10px; }
+
+main .red, main .orange, main .yellow, main .white, main .blue, main .green, main .teal, main .purple {
+  display: block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border: 2px solid #f5f5f5;
+  border-radius: 50%;
+  text-align: center;
+  text-decoration: none;
+  background: #464646;
+  box-shadow: 0 0 3px gray;
+  font-size: 20px;
+  font-weight: bold; }
+
+main button:hover {
+  background: #262626; }
+
+main .red {
+  background: red; }
+
+main .orange {
+  background: orange; }
+
+main .yellow {
+  background: yellow; }
+
+main .white {
+  background: white; }
+
+main .blue {
+  background: blue; }
+
+main .green {
+  background: green; }
+
+main .teal {
+  background: teal; }
+
+main .purple {
+  background: mediumpurple; }
+
+#start {
+  padding: 15px;
+  border: 2px solid black;
+  background-color: violet; }
