--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,119 @@
-/* Include Foundation*/
-@import '../node_modules/foundation-sites/scss/foundation'; //because its in a scss folder
-// @import "foundation/components/buttons";
-// @import "foundation/components/forms";
-
+/*we use ../ because we created a folder for scss.  need to go up a directory*/
+@import '../node_modules/foundation-sites/scss/foundation';
 @include foundation-global-styles;
 @include foundation-grid;
 
-
-
-body {
-    background-color: lightsalmon;
+body{
+    background-color: mediumvioletred;
+    
 }
+header{
+    @include grid-row();
+        h1{
+         @include grid-column(12);
+         text-align: center;
+    }
+    h2 {
+        @include grid-column(12);
+        text-align: center;
+        margin-top: 0;
+    }
+}
+main{
+    
+    #makeGuess{
+        @include grid-row();
+        h2{
+            @include grid-column(12);
+            
+            text-align: center;
+        }
+    }
+    
+    
+    #checkRow{
+        @include grid-row();
+        #guess{
+            @include grid-column(5);
+            display:block;
+            padding: 15px;
+           
+        }
+        #check{
+            @include grid-column(5);
+             padding: 15px;
+             border: 2px solid black;
+             background-color: violet;  
+             display: block;
+             margin-top: 15px;
+    
+          
+        }
+    }
+#colorDisplay{
+    @include grid-row();
+}
+ #colors{
+        @include grid-column(12);
+        border: 2px solid black;
+    }
+        
+#firstRow, #secondRow{
+        display: flex;
+        justify-content: center;
+        margin: 10px;
+                }
+                    
+.red, .orange, .yellow, .white, .blue, .green, .teal, .purple{
+// button code below from codeitdown.com
+        display:block;
+        width:50px;
+        height:50px;
+        line-height:50px;
+        border: 2px solid #f5f5f5;
+        border-radius: 50%;
+        // color: black;
+        text-align:center;
+        text-decoration:none;
+        background: #464646;
+        box-shadow: 0 0 3px gray;
+        font-size:20px;
+        font-weight:bold;
+        }
+            button:hover {
+            background: #262626;
+                }
+                     .red{
+                        background: red;
+                    } 
+                    .orange{
+                        background: orange;
+                    }
+                    .yellow{
+                        background: yellow;
+                    }
+                    .white{
+                        background:white;
+                    }
+                    .blue{
+                        background: blue;
+                    } 
+                    .green{
+                        background: green;
+                    }
+                    .teal{
+                        background: teal;
+                    }
+                    .purple{
+                        background: mediumpurple;
+                    }
+    }
+#start{
+        padding: 15px;
+        border: 2px solid black;
+        background-color: violet; 
+}
+       
+    
+    
+
