--- a/public/style.css
+++ b/public/style.css
@@ -1291,137 +1291,200 @@ header {
     header h2:last-child:not(:first-child) {
       float: right; }
 
-main #makeGuess {
-  max-width: 75rem;
-  margin-right: auto;
-  margin-left: auto; }
-  main #makeGuess::before, main #makeGuess::after {
-    display: table;
-    content: ' '; }
-  main #makeGuess::after {
-    clear: both; }
-  main #makeGuess h2 {
-    width: 100%;
+main {
+  width: 750px;
+  height: 423px;
+  margin: 80px auto;
+  background: #FFFFFF;
+  box-shadow: 1px 2px 3px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 6px; }
+  main #makeGuess {
+    max-width: 75rem;
+    margin-right: auto;
+    margin-left: auto; }
+    main #makeGuess::before, main #makeGuess::after {
+      display: table;
+      content: ' '; }
+    main #makeGuess::after {
+      clear: both; }
+    main #makeGuess h2 {
+      width: 100%;
+      float: left;
+      padding-right: 0.625rem;
+      padding-left: 0.625rem;
+      text-align: center; }
+      @media print, screen and (min-width: 40em) {
+        main #makeGuess h2 {
+          padding-right: 0.9375rem;
+          padding-left: 0.9375rem; } }
+      main #makeGuess h2:last-child:not(:first-child) {
+        float: right; }
+  main #checkRow {
+    max-width: 75rem;
+    margin-right: auto;
+    margin-left: auto; }
+    main #checkRow::before, main #checkRow::after {
+      display: table;
+      content: ' '; }
+    main #checkRow::after {
+      clear: both; }
+    main #checkRow #guess {
+      width: 41.66667%;
+      float: left;
+      padding-right: 0.625rem;
+      padding-left: 0.625rem;
+      display: block;
+      padding: 15px; }
+      @media print, screen and (min-width: 40em) {
+        main #checkRow #guess {
+          padding-right: 0.9375rem;
+          padding-left: 0.9375rem; } }
+      main #checkRow #guess:last-child:not(:first-child) {
+        float: right; }
+    main #checkRow #check {
+      width: 41.66667%;
+      float: left;
+      padding-right: 0.625rem;
+      padding-left: 0.625rem;
+      padding: 15px;
+      border: 2px solid black;
+      background-color: violet;
+      display: block;
+      margin-top: 15px; }
+      @media print, screen and (min-width: 40em) {
+        main #checkRow #check {
+          padding-right: 0.9375rem;
+          padding-left: 0.9375rem; } }
+      main #checkRow #check:last-child:not(:first-child) {
+        float: right; }
+  main #colorDisplay {
+    max-width: 75rem;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around; }
+    main #colorDisplay::before, main #colorDisplay::after {
+      display: table;
+      content: ' '; }
+    main #colorDisplay::after {
+      clear: both; }
+  main #colors1 {
+    width: 33.33333%;
     float: left;
     padding-right: 0.625rem;
-    padding-left: 0.625rem;
-    text-align: center; }
+    padding-left: 0.625rem; }
     @media print, screen and (min-width: 40em) {
-      main #makeGuess h2 {
+      main #colors1 {
         padding-right: 0.9375rem;
         padding-left: 0.9375rem; } }
-    main #makeGuess h2:last-child:not(:first-child) {
+    main #colors1:last-child:not(:first-child) {
       float: right; }
-
-main #checkRow {
-  max-width: 75rem;
-  margin-right: auto;
-  margin-left: auto; }
-  main #checkRow::before, main #checkRow::after {
-    display: table;
-    content: ' '; }
-  main #checkRow::after {
-    clear: both; }
-  main #checkRow #guess {
-    width: 41.66667%;
+  main #colors {
+    width: 33.33333%;
     float: left;
     padding-right: 0.625rem;
     padding-left: 0.625rem;
+    border: 2px solid black; }
+    @media print, screen and (min-width: 40em) {
+      main #colors {
+        padding-right: 0.9375rem;
+        padding-left: 0.9375rem; } }
+    main #colors:last-child:not(:first-child) {
+      float: right; }
+  main #colors2 {
+    width: 33.33333%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem; }
+    @media print, screen and (min-width: 40em) {
+      main #colors2 {
+        padding-right: 0.9375rem;
+        padding-left: 0.9375rem; } }
+    main #colors2:last-child:not(:first-child) {
+      float: right; }
+  main #firstRow, main #secondRow {
+    display: flex;
+    justify-content: center;
+    margin: 10px; }
+  main .color-r, main .color-o, main .color-y, main .color-w, main .color-b, main .color-g, main .color-t, main .color-p {
     display: block;
-    padding: 15px; }
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    border: 2px solid #f5f5f5;
+    border-radius: 50%;
+    text-align: center;
+    text-decoration: none;
+    background: #464646;
+    box-shadow: 0 0 3px gray;
+    font-size: 20px;
+    font-weight: bold; }
+  main button:hover {
+    background: #262626;
+    color: white; }
+  main .color-r {
+    background: red; }
+  main .color-o {
+    background: orange; }
+  main .color-y {
+    background: yellow; }
+  main .color-w {
+    background: white; }
+  main .color-b {
+    background: blue; }
+  main .color-g {
+    background: green; }
+  main .color-t {
+    background: teal; }
+  main .color-p {
+    background: mediumpurple; }
+
+#startBtn {
+  max-width: 75rem;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  justify-content: space-around; }
+  #startBtn::before, #startBtn::after {
+    display: table;
+    content: ' '; }
+  #startBtn::after {
+    clear: both; }
+  #startBtn #placeholder1 {
+    width: 33.33333%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem; }
     @media print, screen and (min-width: 40em) {
-      main #checkRow #guess {
+      #startBtn #placeholder1 {
         padding-right: 0.9375rem;
         padding-left: 0.9375rem; } }
-    main #checkRow #guess:last-child:not(:first-child) {
+    #startBtn #placeholder1:last-child:not(:first-child) {
       float: right; }
-  main #checkRow #check {
-    width: 41.66667%;
+  #startBtn #start {
+    width: 33.33333%;
     float: left;
     padding-right: 0.625rem;
     padding-left: 0.625rem;
+    margin-top: 20px;
     padding: 15px;
     border: 2px solid black;
-    background-color: violet;
-    display: block;
-    margin-top: 15px; }
+    background-color: violet; }
     @media print, screen and (min-width: 40em) {
-      main #checkRow #check {
+      #startBtn #start {
         padding-right: 0.9375rem;
         padding-left: 0.9375rem; } }
-    main #checkRow #check:last-child:not(:first-child) {
+    #startBtn #start:last-child:not(:first-child) {
       float: right; }
-
-main #colorDisplay {
-  max-width: 75rem;
-  margin-right: auto;
-  margin-left: auto; }
-  main #colorDisplay::before, main #colorDisplay::after {
-    display: table;
-    content: ' '; }
-  main #colorDisplay::after {
-    clear: both; }
-
-main #colors {
-  width: 100%;
-  float: left;
-  padding-right: 0.625rem;
-  padding-left: 0.625rem;
-  border: 2px solid black; }
-  @media print, screen and (min-width: 40em) {
-    main #colors {
-      padding-right: 0.9375rem;
-      padding-left: 0.9375rem; } }
-  main #colors:last-child:not(:first-child) {
-    float: right; }
-
-main #firstRow, main #secondRow {
-  display: flex;
-  justify-content: center;
-  margin: 10px; }
-
-main .red, main .orange, main .yellow, main .white, main .blue, main .green, main .teal, main .purple {
-  display: block;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  border: 2px solid #f5f5f5;
-  border-radius: 50%;
-  text-align: center;
-  text-decoration: none;
-  background: #464646;
-  box-shadow: 0 0 3px gray;
-  font-size: 20px;
-  font-weight: bold; }
-
-main button:hover {
-  background: #262626; }
-
-main .red {
-  background: red; }
-
-main .orange {
-  background: orange; }
-
-main .yellow {
-  background: yellow; }
-
-main .white {
-  background: white; }
-
-main .blue {
-  background: blue; }
-
-main .green {
-  background: green; }
-
-main .teal {
-  background: teal; }
-
-main .purple {
-  background: mediumpurple; }
-
-#start {
-  padding: 15px;
-  border: 2px solid black;
-  background-color: violet; }
+  #startBtn #placeholder2 {
+    width: 33.33333%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem; }
+    @media print, screen and (min-width: 40em) {
+      #startBtn #placeholder2 {
+        padding-right: 0.9375rem;
+        padding-left: 0.9375rem; } }
+    #startBtn #placeholder2:last-child:not(:first-child) {
+      float: right; }
