--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,13 @@ header{
     }
 }
 main{
+
+    width: 750px;
+    height: 423px;
+    margin: 80px auto;
+    background: #FFFFFF;
+    box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
+    border-radius: 6px;
     
     #makeGuess{
         @include grid-row();
@@ -52,11 +59,23 @@ main{
     }
 #colorDisplay{
     @include grid-row();
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+}
+
+#colors1{
+    @include grid-column(4);
 }
  #colors{
-        @include grid-column(12);
+        @include grid-column(4);
         border: 2px solid black;
+        
     }
+
+#colors2{
+    @include grid-column(4);
+}
         
 #firstRow, #secondRow{
         display: flex;
@@ -64,7 +83,7 @@ main{
         margin: 10px;
                 }
                     
-.red, .orange, .yellow, .white, .blue, .green, .teal, .purple{
+.color-r, .color-o, .color-y, .color-w, .color-b, .color-g, .color-t, .color-p{
 // button code below from codeitdown.com
         display:block;
         width:50px;
@@ -82,38 +101,56 @@ main{
         }
             button:hover {
             background: #262626;
+            color: white;
                 }
-                     .red{
+                     .color-r{
                         background: red;
                     } 
-                    .orange{
+                    .color-o{
                         background: orange;
                     }
-                    .yellow{
+                    .color-y{
                         background: yellow;
                     }
-                    .white{
+                    .color-w{
                         background:white;
                     }
-                    .blue{
+                    .color-b{
                         background: blue;
                     } 
-                    .green{
+                    .color-g{
                         background: green;
                     }
-                    .teal{
+                    .color-t{
                         background: teal;
                     }
-                    .purple{
+                    .color-p{
                         background: mediumpurple;
                     }
     }
-#start{
+
+#startBtn {
+    @include grid-row();
+    display: flex;
+    justify-content: space-around;
+    
+
+    #placeholder1 {
+        @include grid-column(4);
+    }
+
+    #start{
+        @include grid-column(4);
+        margin-top: 20px;
         padding: 15px;
         border: 2px solid black;
-        background-color: violet; 
-}
-       
+        background-color: violet;        
+    }
+
+    #placeholder2 {
+        @include grid-column(4);
+    }
+}       
     
     
 
